		DeletePages - delete a range of pages
	Added new tool podofomerge for merging two PDFs together
	Added methods to get & set a document's PageMode
	Added methods to set a document's FullScreen mode
	Added methods to set all the various ViewerPreferences for a document
	Added methods to set the document's PageLayout
	Added Outline support
	Added a PdfDestination class
	
	
Version 0.3
    TOTAL revamp of PdfObject & PdfVariant to enable clean/consistent object handling;
    	Added new PdfDocument object - new high level object for reading & writing a PDF doc;
	TOTAL revamp of the PdfDocument, PdfWriter & PdfParser relationship
		PdfDocument is now hub for both reading and writing a document
		it holds the PdfVecObjects - the others just reference them.
	TOTAL revamp of PdfPainter
		now uses PDF coordinates - UserUnits from bottom/left
			added PdfPainterMM for mm-based coords
		supports user-specified float precision
			and writes out floats in an optimal manner
		supports "appending" mode for drawing on existing documents
	Improved handling of the /Info dict for both reading and writing PDFs;
	Added new test app - podofopdfinfo, which will be used to dump metadata, etc. from a PDF;
	Added PdfError::DebugMessage() as the official way to write out debugging info;
		updated all other debugging msgs to use this;
	Added PdfError::DebugEnabled() to enable/disable display of debug messages;
	Added tracking of file size in PdfParser;
	Minor tweak to Linearization handling - to enable getting the status from a doc;
	Added getting GetPdfVersionAsString() to PdfWriter;
	Added new info/object getting methods to PdfDocument;
		bool IsLinearized();
		size_t FileSize();
		PdfObject* GetStructTreeRoot();
		PdfObject* GetMetadata();
		PdfObject* GetOutlines();
		PdfObject* GetAcroForm();
	Updated pdfinfo & podofopdfinfo to call the new PdfDocument methods;
	Added PdfDictionary and PdfArray classes;